# pre-commit-hooks

./: .cspell.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  Cargo.toml  Makefile  README.md  cspell.json  index.html  mkdocs.yaml  package.json  pyproject.toml
.github/release-please/: config.json
.github/workflows/: ci.yaml
megalinter-reports/: .cspell.json  IDE-config.txt  megalinter-report.md
megalinter-reports/copy-paste/html/: index.html  jscpd-report.json
scripts/: template.sh
search/: search_index.json
src/: log.rs  main.rs
src/cmd/: filter.rs  mod.rs  update.rs
src/cmd/sort/: config.rs  hooks.rs  mod.rs
src/proc/: prettier.rs
src/schema/: config.rs  hooks.rs  mod.rs
