[dependencies]
anyhow = "1.0.82"
clap = { features = ["cargo", "derive", "env"], version = "4.5.4" }
clap-verbosity-flag = "2.2.0"
futures = "0.3.30"
octocrab = "0.38.0"
regex = "1.10.4"
reqwest = { features = ["json"], version = "0.12.4" }
semver = "1.0.22"
serde = { features = ["derive"], version = "1.0.198" }
serde_json = "1.0.116"
serde_yaml = "0.9.33"
shadow-rs = "0.27.1"
tokio = { features = ["full"], version = "1.37.0" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[package]
edition = "2021"
name = "pre-commit-hooks"
version = "0.0.0"
