[dependencies]
anyhow = "1.0.82"
clap = { features = ["cargo", "derive", "env"], version = "4.5.4" }
clap-verbosity-flag = "2.2.0"
cli = { git = "https://github.com/liblaf/rust-cli.git" }
concolor-clap = "0.1.0"
serde = { features = ["derive"], version = "1.0.200" }
serde_yaml = "0.9.34"
shadow-rs = "0.27.1"
tokio = { features = ["full"], version = "1.37.0" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[package]
edition = "2021"
name = "liblaf-pre-commit-hooks"
version = "0.1.1"
