[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.3"
tag_format = "$version"
version_files = ["pyproject.toml:version"]

[tool.isort]
profile = "black"

[tool.poetry]
name = "pre-commit-hooks"
version = "0.2.3"
description = "Some hooks for pre-commit"
authors = ["Qin Li <liblaf@outlook.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://liblaf.github.io/pre-commit-hooks/"
documentation = "https://liblaf.github.io/pre-commit-hooks/"
repository = "https://github.com/liblaf/pre-commit-hooks"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.docs.dependencies]
lxml = "^4.9.1"
mkdocs-git-authors-plugin = "^0.6.4"
mkdocs-git-committers-plugin-2 = "^1.1.1"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-material = "^8.5.7"
